<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Adyen N.V.
  ~
  ~ This file is open source and available under the MIT license. See the LICENSE file for more info.
  ~
  ~ Created by caiof on 14/8/2019.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/merchant_information">

        <EditTextPreference
            android:key="@string/merchant_account_key"
            android:title="@string/merchant_account_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/payment_information">

        <EditTextPreference
            android:key="@string/currency_key"
            android:title="@string/currency_title" />

        <EditTextPreference
            android:inputType="number"
            android:key="@string/value_key"
            android:title="@string/value_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/shopper_information">

        <EditTextPreference
            android:key="@string/shopper_reference_key"
            android:title="@string/shopper_reference_title" />

        <EditTextPreference
            android:key="@string/shopper_country_key"
            android:title="@string/shopper_country_title" />

        <EditTextPreference
            android:key="@string/shopper_locale_key"
            android:title="@string/shopper_locale_title" />

        <EditTextPreference
            android:key="@string/shopper_email_key"
            android:title="@string/shopper_email_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/additional_data_title">

        <SwitchPreference
            android:key="@string/threeds2_key"
            android:title="@string/threeds2_title" />
        <SwitchPreference
            android:key="@string/execute3D_key"
            android:title="@string/execute3D_key_title" />

        <SwitchPreference
            android:key="@string/split_card_funding_sources_key"
            android:title="@string/split_card_funding_sources_title" />

        <DropDownPreference
            android:entries="@array/enable_card_address_form_entries"
            android:entryValues="@array/enable_card_address_form_entry_values"
            android:key="@string/enable_card_address_form_key"
            android:title="@string/enable_card_address_form_title"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:entries="@array/instant_payment_method_type_entries"
            android:entryValues="@array/instant_payment_method_type_values"
            android:key="@string/instant_payment_method_type_key"
            android:title="@string/instant_payment_method_type_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_title">

        <DropDownPreference
            android:entries="@array/night_theme_entries"
            android:entryValues="@array/night_theme_entry_values"
            android:key="@string/night_theme_title"
            android:title="@string/night_theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
